--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
     <title>temp conversion</title>
 </head>
 <body>
+    <div class="container">
+        <h1 class="title">
+            converter ºC to ºF
+        </h1>
+        <p>
 
-
+        </p>
+        <input type="text">
+        <div class="row">
+          <div class="col">
+            <button>convert</button>
+          </div>
+          <div class="col">
+            <button>reset</button>
+          </div>
+          <div class="col">
+            <button>change</button>
+          </div>
+        </div>
+      </div>
 
 
     <script src="script.js"></script>
