--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <h1 class="title">
             converter ºC to ºF
         </h1>
-        <p>
 
-        </p>
-        <input type="text">
+        <div class="d-flex justify-content-evenly box">
+            <input class="input" type="text">
+        </div>
         <div class="row">
-          <div class="col">
+          <div class="col-md-4">
             <button>convert</button>
           </div>
-          <div class="col">
+          <div class="col-md-4">
             <button>reset</button>
           </div>
-          <div class="col">
+          <div class="col-md-4">
             <button>change</button>
           </div>
         </div>
