--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <button>convert</button>
+            <button class="convert">convert</button>
           </div>
           <div class="col-md-4">
-            <button>reset</button>
+            <button class="reset">reset</button>
           </div>
           <div class="col-md-4">
-            <button>change</button>
+            <button class="change">change</button>
           </div>
         </div>
       </div>
