--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </h1>
 
         <div class="d-flex justify-content-evenly box">
-            <input class="input" type="text">
+            <input class="input" type="text" placeholder="ºC">
         </div>
+        <div class="div-alert"></div>
         <div class="row">
           <div class="col-md-4">
             <button class="convert">convert</button>
