--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">
-            converter ºC to ºF
-        </h1>
-
+        <h1 class="title">converter ºC to ºF</h1>
         <div class="d-flex justify-content-evenly box">
             <input class="input" type="text" placeholder="ºC">
         </div>
