--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div class="d-flex justify-content-evenly box">
             <input class="input" type="text" placeholder="ºC">
         </div>
-        <div class="div-alert"></div>
+        <div class="div-alert">
+          <p class="pAlert"></p>
+        </div>
         <div class="row">
           <div class="col-md-4">
             <button class="convert">convert</button>
